msidata/slurm-6618383.out
Traceback (most recent call last):
  File "/home/schirris/.conda/envs/thesisp375_clone/lib/python3.7/runpy.py", line 183, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/schirris/.conda/envs/thesisp375_clone/lib/python3.7/runpy.py", line 153, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/yonis/SimCLR-1/msidata/save_feature_vectors.py", line 239
    else:
       ^
SyntaxError: invalid syntax
